--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
   <div id="headerwrap" name="home">
     <header class="clearfix">
       <h1><span class="icon icon-shield"></span></h1>
-      <p>A Bootstrap One Page Template</p>
-      <p>Exclusive for TemplateMag</p>
+      <p>Rafael E. Iwama</p>
+      <p></p>
     </header>
   </div>
   <!-- /headerwrap -->
