--- a/index.html
+++ b/index.html
@@ -74,13 +74,11 @@
   <div class="container" id="about" name="about">
     <div class="row white">
       <br>
-      <h1 class="centered">A LITTLE ABOUT OUR AGENCY</h1>
+      <h1 class="centered">About me</h1>
       <hr>
 
       <div class="col-lg-6">
-        <p>We believe ideas come from everyone, everywhere. In fact, at TemplateMag, everyone within our agency walls is a designer in their own right. And there are a few principles we believe—and we believe everyone should believe—about our design craft.
-          These truths drive us, motivate us, and ultimately help us redefine the power of design. We’re big believers in doing right by our neighbors. After all, we grew up in the Twin Cities and we believe this place has much to offer. So we do what
-          we can to support the community we love.</p>
+        <p>I am a biologist. I graduated at the Universidade Fedeferal de São Carlos and got my master's in Zoology at Universidade de São Paulo, both in Brazil. I am currently a PhD candicate in the Kvist's lab at University of Toronto. My main interest is in protein evolution within metazoa, specially those related to hemostasis imparing. However, I do a lot af taxonomy and systematics.</p>
       </div>
       <!-- col-lg-6 -->
 
