--- a/index.html
+++ b/index.html
@@ -78,14 +78,12 @@
       <hr>
 
       <div class="col-lg-6">
-        <p>I am a biologist. I graduated at the Universidade Fedeferal de São Carlos and got my master's in Zoology at Universidade de São Paulo, both in Brazil. I am currently a PhD candicate in the Kvist's lab at University of Toronto. My main interest is in protein evolution within metazoa, specially those related to hemostasis imparing. However, I do a lot af taxonomy and systematics.</p>
+        <p>I am a biologist. I graduated at the Universidade Fedeferal de São Carlos and got my master's in Zoology at the Universidade de São Paulo, both in Brazil. I am currently a PhD candicate in the Kvist's lab at the Royal Ontario Museum and the University of Toronto. Research focus on the protein evolution, specially those related to bloodfeeding and hemostasis imparing. However, I do a lot af leech (Hirudinida) taxonomy and systematics. I believe that non-model organisms hold valuable information about the evolutionay history of living things.</p>
       </div>
       <!-- col-lg-6 -->
 
       <div class="col-lg-6">
-        <p>Over the past four years, we’ve provided more than $1 million in combined cash and pro bono support to Way to Grow, an early childhood education and nonprofit organization. Other community giving involvement throughout our agency history includes
-          pro bono work for more than 13 organizations, direct giving, a scholarship program through the Minneapolis College of Art & Design, board memberships, and ongoing participation in the Keystone Club, which gives five percent of our company’s
-          earnings back to the community each year.</p>
+        <p> During my PhD I applied transcriptomics and genomics approaches to undertand the origin and evolution of anticoagulants in leeches and the mechanisms that generated the molecular diversity of these proteins found in leeches. However, as a result of my master's and undergraduate research experience, I am a very well trained morphologist too.</p>
       </div>
       <!-- col-lg-6 -->
     </div>
