--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <hr>
 
       <div class="col-lg-6">
-        <p>I am a biologist. I graduated at the Universidade Fedeferal de São Carlos and got my master's in Zoology at the Universidade de São Paulo, both in Brazil. I am currently a PhD candicate in the Kvist's lab at the Royal Ontario Museum and the University of Toronto. Research focus on the protein evolution, specially those related to bloodfeeding and hemostasis imparing. However, I do a lot af leech (Hirudinida) taxonomy and systematics. I believe that non-model organisms hold valuable information about the evolutionay history of living things.</p>
+        <p>I am a biologist. I graduated at the Universidade Fedeferal de São Carlos and got my master's in Zoology at the Universidade de São Paulo, both in Brazil. I am currently a PhD candicate in the Kvist's lab at the Royal Ontario Museum and the University of Toronto. My research focus on the protein evolution, specially those related to bloodfeeding and hemostasis imparing. However, I do a lot af leech (Hirudinida) taxonomy and systematics. I believe that non-model organisms hold valuable information about the evolutionay history of living things.</p>
       </div>
       <!-- col-lg-6 -->
 
