--- a/index.html
+++ b/index.html
@@ -93,24 +93,12 @@
   </div>
   <!-- container -->
 
-  <!-- ==== SECTION DIVIDER1 -->
-  <section class="section-divider textdivider divider1">
-    <div class="container">
-      <h1>DESIGN EXPAND BOUNDARIES</h1>
-      <hr>
-      <p>To achieve real change, we have to expand boundaries. Because the Wild West of what-could-be is unexplored but rife with opportunity.</p>
-    </div>
-    <!-- container -->
-  </section>
-  <!-- section -->
-
-
   <!-- ==== SERVICES ==== -->
-  <div class="container" id="services" name="services">
+  <div class="container" id="Projects" name="Projects">
     <br>
     <br>
     <div class="row">
-      <h2 class="centered">ONE BRAND, ONE VOICE.</h2>
+      <h2 class="centered">Origin and evolution of leech anticoagulants</h2>
       <hr>
       <br>
       <div class="col-lg-offset-2 col-lg-8">
