--- a/index.html
+++ b/index.html
@@ -93,11 +93,12 @@
   </div>
   <!-- container -->
 
-  <!-- ==== SERVICES ==== -->
+  <!-- ==== PROJECTS ==== -->
   <div class="container" id="Projects" name="Projects">
     <br>
     <br>
     <div class="row">
+	    <h1 class="centered">Projects</h1>
       <h2 class="centered">Origin and evolution of leech anticoagulants</h2>
       <hr>
       <br>
