--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <ul class="nav navbar-nav">
             <li><a href="#home" class="smoothscroll">Home</a></li>
             <li> <a href="#about" class="smoothscroll"> About</a></li>
-            <li> <a href="#services" class="smoothscroll"> Services</a></li>
+            <li> <a href="#services" class="smoothscroll"> Projects</a></li>
             <li> <a href="#team" class="smoothscroll"> Team</a></li>
             <li> <a href="#portfolio" class="smoothscroll"> Portfolio</a></li>
             <li> <a href="#blog" class="smoothscroll"> Blog</a></li>
@@ -92,13 +92,28 @@
     <!-- row -->
   </div>
   <!-- container -->
-
+	  
+	  
+  <!-- ==== SECTION DIVIDER2 -->
+  <section class="section-divider textdivider divider2">
+    <div class="container">
+      <h1>DESIGN IS AN INTERACTION</h1>
+      <hr>
+      <p>To develop a deeper and more meaningful connection with consumers, we believe design must invite them to take part in the conversation.</p>
+    </div>
+    <!-- container -->
+  </section>
+  <!-- section -->
+	  
+	  
+	  
   <!-- ==== PROJECTS ==== -->
   <div class="container" id="Projects" name="Projects">
     <br>
     <br>
     <div class="row">
 	    <h1 class="centered">Projects</h1>
+	    <hr>
       <h2 class="centered">Origin and evolution of leech anticoagulants</h2>
       <hr>
       <br>
