--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <ul class="nav navbar-nav">
             <li><a href="#home" class="smoothscroll">Home</a></li>
             <li> <a href="#about" class="smoothscroll"> About</a></li>
-            <li> <a href="#services" class="smoothscroll"> Projects</a></li>
+            <li> <a href="#projects" class="smoothscroll"> Projects</a></li>
             <li> <a href="#team" class="smoothscroll"> Team</a></li>
             <li> <a href="#portfolio" class="smoothscroll"> Portfolio</a></li>
             <li> <a href="#blog" class="smoothscroll"> Blog</a></li>
@@ -70,7 +70,7 @@
   </div>
   <!-- /headerwrap -->
 
-  <!-- ==== ABOUT ==== -->
+  <!-- ==== SERVICES ==== -->
   <div class="container" id="about" name="about">
     <div class="row white">
       <br>
@@ -108,7 +108,7 @@
 	  
 	  
   <!-- ==== PROJECTS ==== -->
-  <div class="container" id="Projects" name="Projects">
+  <div class="container" id="projects" name="projects">
     <br>
     <br>
     <div class="row">
