--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 	  
 	  
   <!-- ==== SECTION DIVIDER2 -->
-  <section class="section-divider textdivider blood">
+  <section class="section-divider textdivider blood.png">
     <div class="container">
       <h1>DESIGN IS AN INTERACTION</h1>
       <hr>
