--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <hr>
       <!-- col-lg-6 -->
       <div class="col-lg-6">
-	<img class="img img-circle" src="img/aboutme.jpg" height="360px" width="480px" alt="">
+	<img src="img/aboutme.jpg" height="360px" width="480px" alt="">
       </div>
 	    
       <!-- col-lg-6 -->
