--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <!-- col-lg-6 -->
 
       <div class="col-lg-6">
-        <p style="font-size:160%"> I am a biologist. I graduated at the Universidade Fedeferal de São Carlos and got my master's in Zoology at the Universidade de São Paulo, both in Brazil. I am currently a PhD candicate in the Kvist's lab at the Royal Ontario Museum and the University of Toronto. My research focus on the protein evolution, specially those related to bloodfeeding and hemostasis imparing. However, I do a lot af leech (Hirudinida) taxonomy and systematics. I believe that non-model organisms hold valuable information about the evolutionay history of living things.</p>
+        <p style="font-size:160%;"> I am a biologist. I graduated at the Universidade Fedeferal de São Carlos and got my master's in Zoology at the Universidade de São Paulo, both in Brazil. I am currently a PhD candicate in the Kvist's lab at the Royal Ontario Museum and the University of Toronto. My research focus on the protein evolution, specially those related to bloodfeeding and hemostasis imparing. However, I do a lot af leech (Hirudinida) taxonomy and systematics. I believe that non-model organisms hold valuable information about the evolutionay history of living things.</p>
 	<p> During my PhD I applied transcriptomics and genomics approaches to undertand the origin and evolution of anticoagulants in leeches and the mechanisms that generated the molecular diversity of these proteins found in leeches. However, as a result of my master's and undergraduate research experience, I am a very well trained morphologist too.</p>
 
       </div>
