--- a/index.html
+++ b/index.html
@@ -128,9 +128,21 @@
       <!-- col-lg -->
     </div>
     <!-- row -->
-
     <div class="row">
-      <h2 class="centered">MOBILE FIRST THINKING, ALWAYS.</h2>
+      <hr>
+      <h2 class="centered">What mechanisms drives the diversition of leech anticoagulants?</h2>
+      <hr>
+      <br>
+      <div class="col-lg-offset-2 col-lg-8">
+        <img class="img-responsive" src="img/iphone.png" alt="">
+      </div>
+      <!-- col -->
+    </div>
+    <!-- row -->
+  </div>
+    <div class="row">
+      <hr>
+      <h2 class="centered">Leech systematics and taxonomy</h2>
       <hr>
       <br>
       <div class="col-lg-offset-2 col-lg-8">
