--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 	  
 	  
   <!-- ==== SECTION DIVIDER2 -->
-  <section class="section-divider textdivider divider_red">
+  <section class="section-divider textdivider divider1">
     <div class="container">
       <h1></h1>
       <hr>
