--- a/index.html
+++ b/index.html
@@ -118,12 +118,9 @@
       <hr>
       <br>
       <div class="col-lg-offset-2 col-lg-8">
-        <p>Employees and consumers. Two halves of a brand’s entirety, the whole of a brand’s audience. Sometimes these two halves have very different viewpoints, creating a weak spot in the brand story. Weakness tarnishes credibility. Brands that aren’t
-          credible aren’t viable.
+        <p>Bloodfeeding is present in several animal lineages, including birds, mollusks, insects and many others. However, feeding on blood is not an easy task and bloodfeeding animals have many adaptations to feed efficiently. One of the most common adaptations for bloodfeeding is the secretion of proteins that inhibit blood coagulation called anticoagulants. These proteins have been recorded and functionally characterized in a variety of bloodfeeding species, but for many, their origins and the specific changes related to their use for bloodfeeding is still unknown.
         </p>
-        <p>We squash weakness by designing the whole brand story. It’s crafted around the truism held by employees and consumers to create an experience that connects from the inside out.</p>
-        <p>By being true to the brand we represent, we elevate the audiences’ relationship to it. Like becomes love becomes a passion. Passion becomes advocacy. And we see the brand blossom from within, creating a whole story the audience embraces. That’s
-          when the brand can truly flex its muscles.</p>
+        <p>I apply transcriptomic, genomics and phylogenetics methods to understand the origin and the major changes of anticoagulants that are associated to bloodfeeding. We search, in non-bloodfeeding species, for genes that are homologs those related to bloodfeeding. Moreoever, we look for repeated sequence patterns across related proteins and compare the distribution of these patterns within a specific gene tree.</p>
       </div>
       <!-- col-lg -->
     </div>
