--- a/index.html
+++ b/index.html
@@ -149,13 +149,17 @@
       <h2 class="centered">Leech systematics and taxonomy</h2>
       <hr>
       <br>
-      <div class="col-lg-offset-2 col-lg-8">
-        <img class="img-responsive" src="img/iphone.png" alt="">
+      !-- col-lg-6 -->
+      <div class="col-lg-5">
+	<img class="img-responsive" src="img/new_motif.jpg" height="240px" width="380px" alt="">
       </div>
-      <!-- col -->
+	    
+      <div class=class="col-lg-6", style="column-width: 350px;">
+        <p>Although leeches have attracted attention due to their exquisite feeding habit and their use in medicine, many leech species are still being described. Particularly in South America, leeches have been taxonomically neglected and many regions have little or no record of leech species. Moreover, due to geographic and cultural barriers South American leech literature have been left out of major taxonomic and systematic reviews, generating a major gap of knowledge in leech taxonomy. I focus my taxonomic in South American leech taxa, especially in the predatory genus Helobdella.</p>
+        <p></p>
+      </div>
+      <!-- col-lg -->
     </div>
-    <!-- row -->
-  </div>
   <!-- container -->
 
 
