--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       <h2 class="centered">Leech systematics and taxonomy</h2>
       <hr>
       <br>
-      !-- col-lg-6 -->
+      <!-- col-lg-6 -->
       <div class="col-lg-5">
 	<img class="img-responsive" src="img/new_motif.jpg" height="240px" width="380px" alt="">
       </div>
