--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
   <div class="container" id="projects" name="projects">
     <br>
     <br>
+    <!-- col-lg -->
     <div class="row">
-	    <h1 class="centered">Projects</h1>
 	    <hr>
       <h2 class="centered">Origin and evolution of leech anticoagulants</h2>
       <hr>
@@ -129,6 +129,8 @@
         </p>
         <p> I apply transcriptomic, genomics and phylogenetics methods to understand the origin and the major changes of anticoagulants that are associated to bloodfeeding. I search, in non-bloodfeeding species, for genes homologs those related to bloodfeeding. Moreoever, I look for repeated sequence patterns across related proteins and compare the distribution of these patterns within a specific gene tree.</p>
       </div>
+      <!-- col-lg -->
+    </div>
 
 	  
        <!-- col-lg -->
