--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 	    
        <!-- col-lg-6 -->
       <div class="col-lg-5">
-	<img class="img-responsive" src="img/new_motif.jpg" height="240px" width="380px" alt="">
+	<img class="img-responsive" src="img/h_buzz.jpg" height="240px" width="380px" alt="">
       </div>
 	    
       <div class=class="col-lg-6", style="column-width: 350px;">
