--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <div class="row">
 	   
 	    <hr>
-      <h2 class="centered">Leech sistematics and taxonomy</h2>
+      <h2 class="centered">Leech systematics and taxonomy</h2>
       <hr>
       <br>
 	    
