--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <br>
     <br>
     <!-- col-lg -->
-    <div class="row">
+    <div class="row white">
 	    <hr>
       <h2 class="centered">Origin and evolution of leech anticoagulants</h2>
       <hr>
@@ -134,7 +134,7 @@
 
 	  
        <!-- col-lg -->
-    <div class="row">
+    <div class="row white">
 	    <hr>
       <h2 class="centered">Origin and evolution of leech anticoagulantsaaaaaaaaaaa</h2>
       <hr>
@@ -155,7 +155,7 @@
     </div>
 	  
 	<!-- col-lg -->
-    <div class="row">
+    <div class="row white">
 	   
 	    <hr>
       <h2 class="centered">Leech systematics and taxonomy</h2>
