--- a/index.html
+++ b/index.html
@@ -109,8 +109,9 @@
 	  
   <!-- ==== PROJECTS ==== -->
   <div class="container" id="projects" name="projects">
-    <br>
-    <br>
+    <div class="row white">
+      <br>
+      <hr>
     <!-- col-lg -->
     <div class="row white">
 	    <hr>
