--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
   <!-- ==== PROJECTS ==== -->
   <div class="container" id="projects" name="projects">
     <div class="row white">
+	    <h1 class="centered"> Projects </h1>
       <br>
       <hr>
     <!-- col-lg -->
