--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
        <!-- col-lg -->
     	<div class="row white">
 	    <hr>
-      	<h2 class="centered">Origin and evolution of leech anticoagulantsaaaaaaaaaaa</h2>
+      	<h2 class="centered">Origin and evolution of leech anticoagulants</h2>
       	<hr>
       	<br>
 	    </div>
