--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
       	<div class=class="col-lg-6", style="column-width: 350px;">
         	<p>Although leeches have attracted attention due to their exquisite feeding habit and their use in medicine, many leech species are still being described. Particularly in South America, leeches have been taxonomically neglected and many regions have little or no record of leech species. Moreover, due to geographic and cultural barriers South American leech literature have been left out of major taxonomic and systematic reviews, generating a major gap of knowledge in leech taxonomy. I focus my taxonomic in South American leech taxa, especially in the predatory genus <i>Helobdella</i>.</p>
-        	<p></p>
+        	<p>On my taxonomic studies I combine molecular and morphological techniques to describe new species and solve taxonomic problems. For example, recently I was part of project that re-evaluated records of Helobdella stagnalis and concluded that this European species does not occur in North America. I also dedicate myself to species description, such as the interesting Helobdella buzz, a Brazilian predatory leech that was recorded living in bromeliad tanks in the Atlantic Forest.</p>
       	</div>
 
       </div>
