--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <li><a href="#home" class="smoothscroll">Home</a></li>
             <li> <a href="#about" class="smoothscroll"> About</a></li>
             <li> <a href="#projects" class="smoothscroll"> Projects</a></li>
-            <li> <a href="#team" class="smoothscroll"> Team</a></li>
+            <li> <a href="#publications" class="smoothscroll"> Publications</a></li>
             <li> <a href="#portfolio" class="smoothscroll"> Portfolio</a></li>
             <li> <a href="#blog" class="smoothscroll"> Blog</a></li>
             <li> <a href="#contact" class="smoothscroll"> Contact</a></li>
@@ -189,8 +189,8 @@
   </section>
   <!-- section -->
 
-  <!-- ==== TEAM MEMBERS ==== -->
-  <div class="container" id="team" name="team">
+  <!-- ==== Publications ==== -->
+  <div class="container" id="publications" name="publications">
     <br>
     <div class="row white centered">
       <h1 class="centered">MEET OUR AWESOME TEAM</h1>
