--- a/index.html
+++ b/index.html
@@ -194,10 +194,15 @@
     <br>
     <div class="row white centered">
       <h1 class="centered">My publications</h1>
+    </div>
       <hr>
       <br>
       <br>
-
+    <div class=class="col-lg-6", style="column-width: 350px;">
+        	<p>Santana DO, Iwama RE, Teixeira AAM, Moura GJB, Faria RG, Mesquita DO. 2019. Spatio-temporal variation and the use of host body surface by ectoparasites of the chelonians Phrynops geoffroanus and Mesoclemmys tuberculata in areas of the Caatinga and Atlantic Forest in northeast Brazil. Parasitol. Res. 118:913–926.</p>
+	    	<p>Iwama RE, Oceguera-Figueroa A, de Carle D, Manglicmot C, Erséus C, Miles NM-S, Siddall ME, Kvist S. 2019. Broad geographic sampling and DNA barcoding do not support the presence of. Zootaxa 4671:1–25.</p>
+	    
+      	</div>
   <!-- ==== GREYWRAP ==== -->
   <div id="greywrap">
     <div class="container">
