--- a/index.html
+++ b/index.html
@@ -199,8 +199,11 @@
       <br>
       <br>
     <div class=class="col-lg-4">
-        	<p>Santana DO, Iwama RE, Teixeira AAM, Moura GJB, Faria RG, Mesquita DO. 2019. Spatio-temporal variation and the use of host body surface by ectoparasites of the chelonians Phrynops geoffroanus and Mesoclemmys tuberculata in areas of the Caatinga and Atlantic Forest in northeast Brazil. Parasitol. Res. 118:913–926.</p>
-	    	<p>Iwama RE, Oceguera-Figueroa A, de Carle D, Manglicmot C, Erséus C, Miles NM-S, Siddall ME, Kvist S. 2019. Broad geographic sampling and DNA barcoding do not support the presence of. Zootaxa 4671:1–25.</p>
+        	<p>Santana DO, Iwama RE, Teixeira AAM, Moura GJB, Faria RG, Mesquita DO. 2019. Spatio-temporal variation and the use of host body surface by ectoparasites of the chelonians <i>Phrynops geoffroanus</i> and <i>Mesoclemmys tuberculate</i> in areas of the Caatinga and Atlantic Forest in northeast Brazil. <i>Parasitol. Res.</i> 118:913–926.</p>
+	    	<p>Iwama RE, Oceguera-Figueroa A, de Carle D, Manglicmot C, Erséus C, Miles NM-S, Siddall ME, Kvist S. 2019. Broad geographic sampling and DNA barcoding do not support the presence of. <i>Zootaxa</i> 4671:1–25.</p>
+	    	<p>Iwama RE, Oceguera-Figueroa A, Giribet G, Kvist S. 2019. The salivary transcriptome of <i>Limnobdella mexicana</i> (Annelida: Clitellata: Praobdellidae) and orthology determination of major leech anticoagulants. <i>Parasitology</i> 146:1338–1346.</p>
+	    	<p>Iwama RE, Nogueira DEM, Gonçalves ANAZ. 2017. <i>Helobdella buzz</i> n. sp. (Clitellata: Hirudinida), a bromeliad leech from the Brazilian Atlantic Forest. <i>Zootaxa</i> 4272:591–595.</p>
+	    	<p>Iwama RE, Arruda EP. 2016. Leeches of the genus <i>Helobdella</i> (Clitellata: Hirudinida) from São Paulo, Brazil with descriptions of two new species using micro-computed tomography and a new record of <i>Barbronia weberi</i> (Blanchard 1897). <i>Zootaxa</i> 4144:411–429.</p>
 	    
     </div>
   <!-- ==== GREYWRAP ==== -->
