--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <li> <a href="#about" class="smoothscroll"> About</a></li>
             <li> <a href="#projects" class="smoothscroll"> Projects</a></li>
             <li> <a href="#publications" class="smoothscroll"> Publications</a></li>
-            <li> <a href="#portfolio" class="smoothscroll"> Portfolio</a></li>
+            <li> <a href="#outreach" class="smoothscroll"> Outreach</a></li>
             <li> <a href="#blog" class="smoothscroll"> Blog</a></li>
             <li> <a href="#contact" class="smoothscroll"> Contact</a></li>
         </div>
@@ -206,39 +206,21 @@
 	    	<p>Iwama RE, Arruda EP. 2016. Leeches of the genus <i>Helobdella</i> (Clitellata: Hirudinida) from São Paulo, Brazil with descriptions of two new species using micro-computed tomography and a new record of <i>Barbronia weberi</i> (Blanchard 1897). <i>Zootaxa</i> 4144:411–429.</p>
 	    
     </div>
-  <!-- ==== GREYWRAP ==== -->
-  <div id="greywrap">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 centered">
-          <img class="img-responsive" src="img/macbook.png" align="">
-        </div>
-        <div class="col-lg-4">
-          <h2>We Are Hiring!</h2>
-          <p>Do you want to be one of use? Sure you want, because we are an awesome team!. Here we work hard every day to craft pixel perfect sites.</p>
-          <p><a class="btn btn-success">Contact Us</a></p>
-        </div>
-      </div>
-      <!-- row -->
-    </div>
-    <br>
-    <br>
-  </div>
-  <!-- greywrap -->
 
-  <!-- ==== SECTION DIVIDER3 -->
-  <section class="section-divider textdivider divider3">
+  <!-- ==== SECTION DIVIDER2 -->
+  <section class="section-divider textdivider divider1">
     <div class="container">
-      <h1>DESIGN SOLVE PROBLEMS</h1>
+      <h1></h1>
       <hr>
-      <p>From the purely practical to the richly philosophical, design is the solution to a host of challenges.</p>
+      <p></p>
     </div>
     <!-- container -->
   </section>
   <!-- section -->
 
+
   <!-- ==== PORTFOLIO ==== -->
-  <div class="container" id="portfolio" name="portfolio">
+  <div class="container" id="outreach" name="outreach">
     <br>
     <div class="row">
       <br>
