--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
   <!-- section -->
 
 
-  <!-- ==== PORTFOLIO ==== -->
+  <!-- ==== OUTREACH ==== -->
   <div class="container" id="outreach" name="outreach">
     <br>
     <div class="row">
