--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 	    	<p>Iwama RE, Arruda EP. 2016. Leeches of the genus <i>Helobdella</i> (Clitellata: Hirudinida) from São Paulo, Brazil with descriptions of two new species using micro-computed tomography and a new record of <i>Barbronia weberi</i> (Blanchard 1897). <i>Zootaxa</i> 4144:411–429.</p>
 	    
     </div>
-
+  </div>
   <!-- ==== SECTION DIVIDER2 -->
   <section class="section-divider textdivider divider1">
     <div class="container">
@@ -224,7 +224,7 @@
     <br>
     <div class="row">
       <br>
-      <h1 class="centered">WE CREATE COOL STUFF</h1>
+      <h1 class="centered">aaaaaaaaaaAWE CREATE COOL STUFF</h1>
       <hr>
       <br>
       <br>
