--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
   <!-- section -->
 
 
-  <!-- ==== OUTREACH ==== -->
+ <!-- ==== OUTREACH ==== -->
   <div class="container" id="outreach" name="outreach">
     <br>
     <div class="row">
@@ -229,6 +229,18 @@
       <br>
       <br>
     </div>
+   </div>
+
+<!-- ==== SECTION DIVIDER2 -->
+  <section class="section-divider textdivider divider1">
+    <div class="container">
+      <h1></h1>
+      <hr>
+      <p></p>
+    </div>
+    <!-- container -->
+  </section>
+  <!-- section -->
 
         <!-- PORTFOLIO IMAGE 1 -->
         <div class="col-md-4 ">
