--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     <br>
     <div class="row">
       <br>
-      <h1 class="centered">aaaaaaaaaaAWE CREATE COOL STUFF</h1>
+      <h1 class="centered">Outreach</h1>
       <hr>
       <br>
       <br>
