--- a/index.html
+++ b/index.html
@@ -229,6 +229,26 @@
       <br>
       <br>
     </div>
+	  <!-- col-lg -->
+    	<div class="row white">
+	    <hr>
+      	<h2 class="centered">Origin and evolution of leech anticoagulants</h2>
+      	<hr>
+      	<br>
+      </div>
+
+
+       <!-- col-lg-6 -->
+      	<div class="col-lg-5">
+	  <img class="img-responsive" src="img/new_motif.jpg" height="240px" width="380px" alt="">
+      	</div>
+
+      	<div class=class="col-lg-6", style="column-width: 350px;">
+        	<p>Bloodfeeding is present in several animal lineages, including birds, mollusks, insects and many others. However, feeding on blood is not an easy task and bloodfeeding animals have many adaptations to feed efficiently. One of the most common adaptations for bloodfeeding is the secretion of proteins that inhibit blood coagulation called anticoagulants. These proteins have been recorded and functionally characterized in a variety of bloodfeeding species, but for many, their origins and the specific changes related to their use for bloodfeeding is still unknown.
+        	</p>
+        	<p> I apply transcriptomic, genomics and phylogenetics methods to understand the origin and the major changes of anticoagulants that are associated to bloodfeeding. I search, in non-bloodfeeding species, for genes homologs those related to bloodfeeding. Moreoever, I look for repeated sequence patterns across related proteins and compare the distribution of these patterns within a specific gene tree.</p>
+      	</div>
+      <!-- col-lg -->
    </div>
 
 <!-- ==== SECTION DIVIDER2 -->
