--- a/index.html
+++ b/index.html
@@ -242,10 +242,11 @@
       	</div>
 
       	<div class=class="col-lg-6", style="column-width: 350px;">
-        	<p>Bloodfeeding is present in several animal lineages, including birds, mollusks, insects and many others. However, feeding on blood is not an easy task and bloodfeeding animals have many adaptations to feed efficiently. One of the most common adaptations for bloodfeeding is the secretion of proteins that inhibit blood coagulation called anticoagulants. These proteins have been recorded and functionally characterized in a variety of bloodfeeding species, but for many, their origins and the specific changes related to their use for bloodfeeding is still unknown.
-        	</p>
-        	<p> I apply transcriptomic, genomics and phylogenetics methods to understand the origin and the major changes of anticoagulants that are associated to bloodfeeding. I search, in non-bloodfeeding species, for genes homologs those related to bloodfeeding. Moreoever, I look for repeated sequence patterns across related proteins and compare the distribution of these patterns within a specific gene tree.</p>
-      	</div>
+        	<p>During all my academic career I had the opportunity to work and study at institutions that value science outreach. Therefore, I share the same interest. During my undergraduate, as a requirement of my education licence, I participated in several activities to completement the curriculum of primary and secondary schools. I also designed and taught short lab courses that were applied in a public high school in Sorocaba, Brazil.</p>
+        	<p>At the university of São Paulo, I participated in an initiative to bring specimens and biological samples to parks in São Paulo. Children, teenagers, adults and elder usually spend hours looking at samples on a microscope, fossils, invertebrates or just playing biologically inspired games. This initiative is called Bio na Rua and is organized by the students of the Institute of Biosciences of the University of São Paulo.</p>
+		<p>Check fallowing link for more information</p>
+		<p>As a PhD student at the Royal Ontario Museum, I had the chance to participate in several outreach programs, such as Friday Night Live and other small programs. I also organized a workshop for the general public about bloodfeeding organisms covering evolution and diversity of these animals.</p>
+	  </div>
       <!-- col-lg -->
    </div>
 
